# utrfx

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: python_ci.yml
.github/workflows-to-enable/: python_ci.yml
src/utrfx/: gtf_io.py  model.py  uorf.py  util.py
src/utrfx/genome/: GCF_000001405.25_GRCh37.p13_assembly_report.tsv  GCF_000001405.39_GRCh38.p13_assembly_report.tsv  __init__.py  _builds.py  _genome.py  _test_builds.py  _test_genome.py
tests/: conftest.py  test_gtf_io.py  test_uorf.py  test_util.py  test_utils.py
tests/data/: Homo_sapiens_ENST00000381418_9_sequence_sample.fa
tests/genome/: test_genome.py
